--- a/vcweb/lighterprints/templates/lighterprints/mobile/index.html
+++ b/vcweb/lighterprints/templates/lighterprints/mobile/index.html
@@ -232,7 +232,7 @@
                         </ul>
                     </div>
                     <div class='tab-pane active' id='unlocked-challenges'>
-                        <ul id="challengesList" data-role="listview" data-inset="true" data-theme="d" data-bind='template: { name: challenges-template, foreach: unlockedChallenges()}'>
+                        <ul id="challengesList" data-role="listview" data-inset="true" data-theme="d" data-bind='template: { name: challenges-template, foreach: activities}'>
                         </ul>
                     </div>
                 </div>
