fixing activity perform

--- a/vcweb/lighterprints/templates/lighterprints/mobile/index.html
+++ b/vcweb/lighterprints/templates/lighterprints/mobile/index.html
@@ -465,7 +465,7 @@
                     </p>
                     <p data-bind='text: summary'>
                     </p>
-                    <a href="index.html" reloadPage="true" data-role="button" data-theme="b">OK</a>
+                    <a href="index.html" data-role="button" data-rel="back" data-theme="b">OK</a>
                 </div>
             </div>
         </div>
