--- a/vcweb/lighterprints/templates/lighterprints/mobile/index.html
+++ b/vcweb/lighterprints/templates/lighterprints/mobile/index.html
@@ -131,8 +131,7 @@
     </script>
     <script type='text/html' id='challenges-template'>
     	        <li data-icon="false">
-    	        	
-            <a href="#" data-bind='css: status, click: $root.perform'>
+            	<a href="#" data-bind='css: status, click: $root.perform'>
             	<span data-bind='if: availableNow'>Perform</span>
 				<span data-bind='if: completed'>Completed <span class='icon-check'></span></span>
 				<span data-bind='if: expired'>Expired <span class='icon-warning-sign'></span></span>
@@ -178,20 +177,20 @@
                 <img width="30px" height="30px" src="https://vcweb.asu.edu/static/images/lighterprints/logo.png" alt="footprint logo">lighter<strong style="color:#b9ed2e;">footprints</strong>
                 <a href="#defaultpanel" class="ui-btn-right" data-role="button" data-inline="true" data-iconpos="notext" data-theme="a" data-icon="align-justify"></a>
             </div>
-            <div data-role="content">
+            <div data-role="content" data-theme="d">
                 <h2><span class="icon-gauge"></span> Team Dashboard
                 <div class="ui-bar">
                 </div>
                 <div class="ui-grid-a" data-inset="true">
                     <div class="ui-block-a">
-                        <div class="ui-bar ui-bar-d" style="height:70px">
+                        <div class="ui-bar ui-bar-e" style="height:70px">
                             Today's Score
                             <br>
                             <span data-bind="text: averagePoints"></span>
                         </div>
                     </div>
                     <div class="ui-block-b">
-                        <div class="ui-bar ui-bar-d" style="height:70px">
+                        <div class="ui-bar ui-bar-e" style="height:70px">
                             Current Level
                             <div data-bind='if: experimentCompleted'>
                                 <img alt='Experiment Completed' class='group-level' width='120' height='70' src='https://vcweb.asu.edu/static/images/lighterprints/experiment-completed.png'>
@@ -204,7 +203,7 @@
                 </div><!-- /grid-a -->
                 <div class="ui-grid-a">
                     <div class="ui-block-a">
-                        <div class="ui-bar ui-bar-d" style="height:70px">
+                        <div class="ui-bar ui-bar-e" style="height:70px">
                             Today's Progress
                             <br>
                             Your group progress: <span data-bind="text: averagePoints"></span>
@@ -212,7 +211,7 @@
                         </div>
                     </div>
                     <div class="ui-block-b">
-                        <div class="ui-bar ui-bar-d" style="height:70px">
+                        <div class="ui-bar ui-bar-e" style="height:70px">
                             Time Remaining
                             <table>
                                 <tr>
@@ -276,6 +275,21 @@
                     lighter<strong>footprints</strong>
                 </div>
             </div>
+			<div data-role="popup" id="activityCompletedDialog" data-overlay-theme="a" data-theme="c" class="ui-corner-all">
+				<div data-role="header" data-theme="a" class="ui-corner-top">
+					<h1>Performing Challenge...</h1>
+				</div>
+				<div data-role="content" data-theme="d" class="ui-corner-bottom ui-content">
+					<div data-bind='with: lastPerformedActivity'>		            				
+			                <img alt='Lighterprints Activity Badge' data-bind='attr: {src: "/static/images/lighterprints/badges/" + name() + ".png" }'>
+				        	<h3>You completed a challenge!</h3>
+						<p><strong><em data-bind='text: display_name'></em></strong> for <span class='lighterprints-green' data-bind='text: points'></span><i class='icon-leaf lighterprints-green'></i>
+						</p>
+						<p data-bind='text: summary'></p>
+			        </div>
+					<a href="#" data-role="button" data-inline="true" data-rel="back" data-theme="c">Continue</a> 
+				</div>
+			</div>
         </div>
         <!-- /page dashboardPage--><!-- Start of #dashboardLockedChallengePage -->
         <!-- /page dashboardLockedChallengePage--><!-- Start of first page: #challengesPage -->
@@ -291,7 +305,7 @@
                 <img width="30px" height="30px" src="https://vcweb.asu.edu/static/images/lighterprints/logo.png" alt="footprint logo">lighter<strong style="color:#b9ed2e;">footprints</strong>
                 <a href="#defaultpanel" class="ui-btn-right" data-role="button" data-inline="true" data-iconpos="notext" data-theme="a" data-icon="align-justify"></a>
             </div>
-            <div data-role="content" id="myTeam">
+            <div data-role="content" data-theme="d">
                 <h2><span class="icon-comment"></span> My Team</h2>
                 <div class="ui-bar-d">
                     <div data-bind="ifnot: hasChatMessages() " data-inset="true">
@@ -340,7 +354,7 @@
                 <img width="30px" height="30px" src="https://vcweb.asu.edu/static/images/lighterprints/logo.png" alt="footprint logo">lighter<strong style="color:#b9ed2e;">footprints</strong>
                 <a href="#defaultpanel" class="ui-btn-right" data-role="button" data-inline="true" data-iconpos="notext" data-theme="a" data-icon="align-justify"></a>
             </div>
-            <div data-role="content">
+            <div data-role="content" data-theme="d">
                 <h2><span class="icon-question"></span> Help</h2>
                 <div class="ui-bar-d" data-inset="true">
                     <h2>Instructions</h2>
@@ -416,7 +430,7 @@
                     <div data-role="controlgroup" data-type="horizontal" data-theme="b">
                         <a href="#dashboardPage" data-theme="b"> Dashboard</a>
                         <a href="#challengesPage"> Challenges</a>
-                        <a href="#myTeam"> My Team</a>
+                        <a href="#myTeamPage"> My Team</a>
                         <a href="#"> Help</a>
                     </div>
                     2013 Arizona Board Of Regents
@@ -427,26 +441,6 @@
                 </div>
             </div>
         </div>
-        <!-- /page helpPage--><!-- Start of page: #modalPage -->
-        <div data-role="page" id="modalPage">
-            <div data-role="header" data-theme="b">
-                <h1></h1>
-            </div>
-            <div data-role="content">
-                <div id='activityPerformedModalText' data-bind='with: lastPerformedActivity'>
-                    <img alt='Lighterprints Activity Badge' data-bind='attr: {src: "https://vcweb.asu.edu/static/images/lighterprints/badges/" + name() + ".png" }'>
-                    <h3>You completed a challenge!</h3>
-                    <p>
-                        <strong><em data-bind='text: display_name'></em></strong>
-                        for <span class='lighterprints-green' data-bind='text: points'></span>
-                        <i class='icon-leaf lighterprints-green'></i>
-                    </p>
-                    <p data-bind='text: summary'>
-                    </p>
-                    <a href="#" data-role="button" data-rel="back" data-theme="b">OK</a>
-                </div>
-            </div>
-        </div>
-        <!-- /page modalPage-->
+        <!-- /page helpPage-->
     </body>
 </html>
