--- a/vcweb/lighterprints/static/css/lighterprints/mobile/style.css
+++ b/vcweb/lighterprints/static/css/lighterprints/mobile/style.css
@@ -61,7 +61,7 @@ a.expired-challenge {
     border-color: #ff9393 #ff9393 hsl(0, 100%, 77%);
     text-shadow: 0 1px 1px rgba(255, 255, 255, 0.13);
 }
-a.perform-challenge,a.completed-challenge {
+a.perform-challenge {
     background-color: hsl(96, 81%, 42%) !important;
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#66dd17", endColorstr="#59c114");
     background-image: -khtml-gradient(linear, left top, left bottom, from(#66dd17), to(#59c114));
@@ -72,6 +72,19 @@ a.perform-challenge,a.completed-challenge {
     background-image: -o-linear-gradient(top, #66dd17, #59c114);
     background-image: linear-gradient(#66dd17, #59c114);
     border-color: #59c114 #59c114 hsl(96, 81%, 40.5%);
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.09);
+}
+a.completed-challenge {
+    background-color: hsl(96, 81%, 42%) !important;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#aed992", endColorstr="#aed992");
+    background-image: -khtml-gradient(linear, left top, left bottom, from(#aed992), to(#aed992));
+    background-image: -moz-linear-gradient(top, #aed992, #aed992);
+    background-image: -ms-linear-gradient(top, #aed992, #aed992);
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #aed992), color-stop(100%, #aed992));
+    background-image: -webkit-linear-gradient(top, #aed992, #aed992);
+    background-image: -o-linear-gradient(top, #aed992, #aed992);
+    background-image: linear-gradient(#aed992, #aed992);
+    border-color: #aed992 #aed992 hsl(96, 81%, 40.5%);
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.09);
 }
 .lighterprints-red {
