--- a/vcweb/lighterprints/static/css/lighterprints/mobile/style.css
+++ b/vcweb/lighterprints/static/css/lighterprints/mobile/style.css
@@ -90,6 +90,9 @@ a.completed-challenge {
 .lighterprints-red {
     color: #FF0066;
 }
+.lighterprints-grey {
+    color: #898989;
+}
 .lighterprints-blue {
     color: #13a5e6;
 }
