--- a/vcweb/lighterprints/static/css/lighterprints/mobile/style.css
+++ b/vcweb/lighterprints/static/css/lighterprints/mobile/style.css
@@ -30,8 +30,7 @@ body{
 	text-align:left;
 }
 a.upcoming-challenge, a.expired-challenge, a.perform-challenge, a.completed-challenge {
-    text-transform: uppercase;
-    color: #FFF !important;
+    color: #4d4d4d !important;
     -webkit-font-smoothing: antialiased;
     background-repeat: repeat-x;
 }
@@ -46,7 +45,6 @@ a.upcoming-challenge {
     background-image: -o-linear-gradient(top, #f4f4f4, #898989);
     background-image: linear-gradient(#f4f4f4, #898989);
     border-color: #898989 #898989 hsl(0, 0%, 43.5%);
-    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.69);
 }
 a.expired-challenge {
     background-color: hsl(0, 100%, 79%) !important;
@@ -59,7 +57,6 @@ a.expired-challenge {
     background-image: -o-linear-gradient(top, #ffbcbc, #ff9393);
     background-image: linear-gradient(#ffbcbc, #ff9393);
     border-color: #ff9393 #ff9393 hsl(0, 100%, 77%);
-    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.13);
 }
 a.perform-challenge {
     background-color: hsl(96, 81%, 42%) !important;
@@ -72,7 +69,6 @@ a.perform-challenge {
     background-image: -o-linear-gradient(top, #66dd17, #59c114);
     background-image: linear-gradient(#66dd17, #59c114);
     border-color: #59c114 #59c114 hsl(96, 81%, 40.5%);
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.09);
 }
 a.completed-challenge {
     background-color: hsl(96, 81%, 42%) !important;
@@ -85,8 +81,8 @@ a.completed-challenge {
     background-image: -o-linear-gradient(top, #aed992, #aed992);
     background-image: linear-gradient(#aed992, #aed992);
     border-color: #aed992 #aed992 hsl(96, 81%, 40.5%);
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.09);
 }
+
 .lighterprints-red {
     color: #FF0066;
 }
