--- a/vcweb/lighterprints/static/css/lighterprints/mobile/themeroller.css
+++ b/vcweb/lighterprints/static/css/lighterprints/mobile/themeroller.css
@@ -47,7 +47,7 @@
 .ui-bar-a select,
 .ui-bar-a textarea,
 .ui-bar-a button {
-	   font-family: Arial /*{global-font-family}*/;
+	   font-family:  sans-serif /*{global-font-family}*/;
 }
 .ui-body-a,
 .ui-overlay-a {
@@ -71,7 +71,7 @@
 .ui-body-a select,
 .ui-body-a textarea,
 .ui-body-a button {
-	   font-family: Arial /*{global-font-family}*/;
+	   font-family: sans-serif /*{global-font-family}*/;
 }
 .ui-body-a .ui-link-inherit {
 	color: #4d4d4d /*{a-body-color}*/;
@@ -145,7 +145,7 @@
 .ui-btn-up-a,
 .ui-btn-hover-a,
 .ui-btn-down-a {
-	   font-family: Arial /*{global-font-family}*/;
+	   font-family: sans-serif /*{global-font-family}*/;
 	text-decoration: none;
 }
 /* B
@@ -184,7 +184,7 @@
 .ui-bar-b select,
 .ui-bar-b textarea,
 .ui-bar-b button {
-	   font-family: Arial /*{global-font-family}*/;
+	   font-family: sans-serif /*{global-font-family}*/;
 }
 .ui-body-b,
 .ui-overlay-b {
@@ -208,7 +208,7 @@
 .ui-body-b select,
 .ui-body-b textarea,
 .ui-body-b button {
-	   font-family: Arial /*{global-font-family}*/;
+	   font-family: sans-serif /*{global-font-family}*/;
 }
 .ui-body-b .ui-link-inherit {
 	color: #5F6E77 /*{b-body-color}*/;
@@ -282,7 +282,7 @@
 .ui-btn-up-b,
 .ui-btn-hover-b,
 .ui-btn-down-b {
-	   font-family: Arial /*{global-font-family}*/;
+	   font-family: sans-serif /*{global-font-family}*/;
 	text-decoration: none;
 }
 
@@ -323,7 +323,7 @@
 .ui-bar-c select,
 .ui-bar-c textarea,
 .ui-bar-c button {
-	   font-family: Arial /*{global-font-family}*/;
+	   font-family: sans-serif /*{global-font-family}*/;
 }
 .ui-body-c,
 .ui-overlay-c {
@@ -347,7 +347,7 @@
 .ui-body-c select,
 .ui-body-c textarea,
 .ui-body-c button {
-	   font-family: Arial /*{global-font-family}*/;
+	   font-family: sans-serif /*{global-font-family}*/;
 }
 .ui-body-c .ui-link-inherit {
 	color: #5F6E77 /*{c-body-color}*/;
@@ -421,7 +421,7 @@
 .ui-btn-up-c,
 .ui-btn-hover-c,
 .ui-btn-down-c {
-	   font-family: Arial /*{global-font-family}*/;
+	   font-family: sans-serif /*{global-font-family}*/;
 	text-decoration: none;
 }
 
@@ -462,7 +462,7 @@
 .ui-bar-d select,
 .ui-bar-d textarea,
 .ui-bar-d button {
-	   font-family: Arial /*{global-font-family}*/;
+	   font-family: sans-serif /*{global-font-family}*/;
 }
 .ui-body-d,
 .ui-overlay-d {
@@ -486,7 +486,7 @@
 .ui-body-d select,
 .ui-body-d textarea,
 .ui-body-d button {
-	   font-family: Arial /*{global-font-family}*/;
+	   font-family: sans-serif /*{global-font-family}*/;
 }
 .ui-body-d .ui-link-inherit {
 	color: #5F6E77 /*{d-body-color}*/;
@@ -560,7 +560,7 @@
 .ui-btn-up-d,
 .ui-btn-hover-d,
 .ui-btn-down-d {
-	   font-family: Arial /*{global-font-family}*/;
+	   font-family: sans-serif /*{global-font-family}*/;
 	text-decoration: none;
 }
 
@@ -601,7 +601,7 @@
 .ui-bar-e select,
 .ui-bar-e textarea,
 .ui-bar-e button {
-	   font-family: Arial /*{global-font-family}*/;
+	   font-family: sans-serif /*{global-font-family}*/;
 }
 .ui-body-e,
 .ui-overlay-e {
@@ -625,7 +625,7 @@
 .ui-body-e select,
 .ui-body-e textarea,
 .ui-body-e button {
-	   font-family: Arial /*{global-font-family}*/;
+	   font-family: sans-serif /*{global-font-family}*/;
 }
 .ui-body-e .ui-link-inherit {
 	color: #5F6E77 /*{e-body-color}*/;
@@ -699,7 +699,7 @@
 .ui-btn-up-e,
 .ui-btn-hover-e,
 .ui-btn-down-e {
-	   font-family: Arial /*{global-font-family}*/;
+	   font-family: sans-serif /*{global-font-family}*/;
 	text-decoration: none;
 }
 
@@ -728,7 +728,7 @@ a.ui-link-inherit {
 	background-image:     -ms-linear-gradient( #ffffff /*{global-active-background-start}*/, #ffffff /*{global-active-background-end}*/); /* IE10 */
 	background-image:      -o-linear-gradient( #ffffff /*{global-active-background-start}*/, #ffffff /*{global-active-background-end}*/); /* Opera 11.10+ */
 	background-image:         linear-gradient( #ffffff /*{global-active-background-start}*/, #ffffff /*{global-active-background-end}*/);
-	   font-family: Arial /*{global-font-family}*/;
+	   font-family: sans-serif /*{global-font-family}*/;
 }
 .ui-btn-active:visited,
 .ui-btn-active:hover,
